# agent-os

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/agent_fabric/: __init__.py
src/agent_fabric/adapters/: __init__.py  base.py  crewai_adapter.py  generic.py  langgraph_adapter.py  openai_agents.py
src/agent_fabric/cli/: main.py
src/agent_fabric/mcp/: __init__.py  client.py  manager.py  server.py
src/agent_fabric/pipelines/: __init__.py  dag.py  executor.py  nodes.py  yaml.py
src/agent_fabric/plugins/: __init__.py  loader.py  manager.py  manifest.py
src/agent_fabric/plugins/builtin/: github_tools.py  hackernews.py
src/agent_fabric/server/: app.py
src/agent_os/: __init__.py
src/agent_os/cli/: __init__.py  main.py
src/agent_os/core/: __init__.py  config.py  events.py  models.py  permissions.py  protocols.py  workspace.py
src/agent_os/memory/: __init__.py  engine.py  fts_search.py  knowledge_graph.py  sqlite_store.py  vector_store.py
src/agent_os/observability/: __init__.py  event_store.py  logger.py
src/agent_os/providers/: __init__.py  ollama.py  openai.py
src/agent_os/runtime/: __init__.py  agent.py  enhance.py  runtime.py
src/agent_os/server/: __init__.py  app.py
src/agent_os/tools/: __init__.py  decorator.py  registry.py  runtime.py
src/agent_os/tools/builtin/: __init__.py  file_ops.py  url_reader.py  web_search.py
tests/: test_core.py  test_memory_and_tools.py  test_phase3c_mcp_and_adapters.py  test_phase_d_studio.py  test_pipelines.py  test_plugins_and_adapters.py  test_runtime_and_providers.py  test_server_and_cli.py
