[project]
name = "agent-os"
version = "0.1.0"
description = "The runtime for AI agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "AgentOS Contributors" }
]
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "typer>=0.9.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
vectors = [
    "qdrant-client>=1.7.0",
]
openai = [
    "openai>=1.10.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
google = [
    "google-generativeai>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_os"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
